[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/user interface/themes/main_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/user interface/themes/MinimalUI/MinimalUI.tres" type="Theme" id=2]
[ext_resource path="res://src/screens/UserDataScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/user interface/backgrounds/BackgroundApp.png" type="Texture" id=4]
[ext_resource path="res://assets/user interface/themes/secondary_font.tres" type="DynamicFont" id=5]

[node name="UserDataScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 101.0
custom_constants/separation = 200
alignment = 1

[node name="Name" type="LineEdit" parent="HBoxContainer"]
margin_left = 675.0
margin_right = 853.0
margin_bottom = 94.0
theme = ExtResource( 2 )
align = 1
expand_to_text_length = true

[node name="Surname" type="LineEdit" parent="HBoxContainer"]
margin_left = 1053.0
margin_right = 1231.0
margin_bottom = 94.0
align = 1
expand_to_text_length = true

[node name="HBoxContainer1" type="HBoxContainer" parent="."]
margin_left = 1.0
margin_top = 103.0
margin_right = 1914.0
margin_bottom = 189.0

[node name="Games_1" type="Label" parent="HBoxContainer1"]
margin_top = 13.0
margin_right = 954.0
margin_bottom = 73.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )

[node name="Games_2" type="Label" parent="HBoxContainer1"]
visible = false
margin_left = 639.0
margin_top = 22.0
margin_right = 1274.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Partite giocate mod. 2"

[node name="dec_avg" type="Label" parent="HBoxContainer1"]
margin_left = 958.0
margin_top = 13.0
margin_right = 1913.0
margin_bottom = 73.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Media Decibel"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_top = 210.0
margin_right = 1916.0
margin_bottom = 296.0
theme = ExtResource( 2 )

[node name="Games_1" type="LineEdit" parent="HBoxContainer2"]
margin_right = 130.0
margin_bottom = 86.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1
expand_to_text_length = true

[node name="Games_2" type="LineEdit" parent="HBoxContainer2"]
visible = false
margin_left = 639.0
margin_right = 745.0
margin_bottom = 86.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1
expand_to_text_length = true

[node name="dec_avg" type="LineEdit" parent="HBoxContainer2"]
margin_left = 959.0
margin_right = 1089.0
margin_bottom = 86.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1
expand_to_text_length = true

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_left = 2.0
margin_top = 302.0
margin_right = 1915.0
margin_bottom = 388.0

[node name="High_1" type="Label" parent="HBoxContainer3"]
margin_top = 13.0
margin_right = 954.0
margin_bottom = 73.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )

[node name="High_2" type="Label" parent="HBoxContainer3"]
visible = false
margin_left = 639.0
margin_top = 22.0
margin_right = 1274.0
margin_bottom = 64.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Miglior punteggio mod. 2"

[node name="Breath" type="Label" parent="HBoxContainer3"]
margin_left = 958.0
margin_top = 13.0
margin_right = 1913.0
margin_bottom = 73.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Durata respiro"

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
margin_left = 3.0
margin_top = 385.0
margin_right = 1917.0
margin_bottom = 475.0
theme = ExtResource( 2 )

[node name="High_1" type="LineEdit" parent="HBoxContainer4"]
margin_right = 130.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1
expand_to_text_length = true

[node name="High_2" type="LineEdit" parent="HBoxContainer4"]
visible = false
margin_left = 639.0
margin_right = 745.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1
expand_to_text_length = true

[node name="Breath" type="LineEdit" parent="HBoxContainer4"]
margin_left = 959.0
margin_right = 1089.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1
expand_to_text_length = true

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 497.0
margin_right = 1917.0
margin_bottom = 587.0

[node name="Duration" type="Label" parent="HBoxContainer5"]
margin_top = 15.0
margin_right = 954.0
margin_bottom = 75.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Durata partita"

[node name="Score" type="Label" parent="HBoxContainer5"]
margin_left = 958.0
margin_top = 15.0
margin_right = 1912.0
margin_bottom = 75.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Punteggio partita"

[node name="Breath" type="Label" parent="HBoxContainer5"]
visible = false
margin_left = 1277.0
margin_top = 24.0
margin_right = 1912.0
margin_bottom = 66.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "Durata respiro"

[node name="HBoxContainer6" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 599.0
margin_right = 1918.0
margin_bottom = 689.0
theme = ExtResource( 2 )

[node name="Duration" type="LineEdit" parent="HBoxContainer6"]
margin_right = 130.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1
expand_to_text_length = true

[node name="Score" type="LineEdit" parent="HBoxContainer6"]
margin_left = 959.0
margin_right = 1089.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1
expand_to_text_length = true

[node name="Breath" type="LineEdit" parent="HBoxContainer6"]
visible = false
margin_left = 1278.0
margin_right = 1384.0
margin_bottom = 90.0
size_flags_horizontal = 2
custom_fonts/font = ExtResource( 5 )
align = 1
expand_to_text_length = true

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -154.5
margin_top = -180.0
margin_right = 154.5
margin_bottom = -98.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "INDIETRO"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
